--- a/tiny_mrp/mrp/templates/mrp/purchase/updateReq.html
+++ b/tiny_mrp/mrp/templates/mrp/purchase/updateReq.html
@@ -45,117 +45,9 @@
      </div>
  {% endif %}
     </div>
-    {% if files %}
-    <hr class="m-0">
-    <div class="card-body">
-        <h6 class="mb-3 font-size-11 text-uppercase">فایلهای پیوست شده</h6>
-        <ul class="list-unstyled mb-0">
-            {% for i in files %}
-            <li class="small">
-                <a target="_blank" href="{{i.file.url}}">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-paperclip mr-1 width-15 height-15"><path d="M21.44 11.05l-9.19 9.19a6 6 0 0 1-8.49-8.49l9.19-9.19a4 4 0 0 1 5.66 5.66l-9.2 9.19a2 2 0 0 1-2.83-2.83l8.49-8.48"></path></svg>
-                   {{i}}
-                </a>
-            </li>
-            {% endfor %}
-            
-        </ul>
-    </div>
-    {% endif %}
+   
     
-    <div class=" card-body border p-3">
-        <ul class="nav nav-tabs mb-3" role="tablist">
-            <li class="nav-item">
-              <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab"
-                 aria-controls="home" aria-selected="true">خانه</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab"
-                 aria-controls="profile" aria-selected="false">Profile</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" id="contact-tab" data-toggle="tab" href="#contact" role="tab"
-                 aria-controls="contact" aria-selected="false">تماس</a>
-            </li>
-          </ul>
-          <div class="tab-content">
-            <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
-                <div class="card-body">
-                    <form id="image-upload-form" method="post" enctype="multipart/form-data">
-                        <div id="image-container" class="mb-3">
-                          <!-- Dynamic image input fields will be added here -->
-                        </div>
-                        <div class="d-flex justify-content-between">
-                          <button type="button" id="add-image-btn" class="btn btn-secondary">
-                            <i class="fas fa-plus mr-2"></i>افزودن تصویر
-                          </button>
-                          
-                        
-                        </div>
-                      </form>
-                </div>
-            </div>
-            <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
-                <div class=" card-body border p-3">
-                    <div class="d-flex mb-3">
-                        <div class="d-flex align-items-center">
-                            <figure class="avatar avatar-sm mr-3">
-                                <img src="{% static '/assets/media/image/user/women_avatar2.jpg' %}" class="rounded-circle" alt="...">
-                            </figure>
-                            <div class="d-inline-block">
-                                <div><strong>صنم امیری</strong> لینک به اشتراک گذاشت</div>
-                                <small class="text-muted">7 ساعت قبل</small>
-                            </div>
-                        </div>
-                        <div class="dropdown ml-auto">
-                            <a href="#" data-toggle="dropdown">
-                                <i class="fa fa-ellipsis-v"></i>
-                            </a>
-                            <div class="dropdown-menu dropdown-menu-right">
-                                <a href="#" class="dropdown-item">اشتراک</a>
-                                <a href="#" class="dropdown-item">ویرایش</a>
-                                <a href="#" class="dropdown-item">حذف</a>
-                            </div>
-                        </div>
-                    </div>
-                    <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک است، چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است، و برای شرایط فعلی تکنولوژی مورد نیاز، و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد،</p>
-                    <div class="d-flex justify-content-between align-items-center">
-                        <div>
-                            <a href="#" title="" data-toggle="tooltip" data-original-title="لایک">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-heart width-17 height-17 mr-1"><path d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z"></path></svg> 1
-                            </a>
-                            <a href="#" class="ml-3">
-                               پاسخ
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="card-body">
-                    <h6 class="mb-3 font-size-11 text-uppercase">پاسخ</h6>
-                    <form class="d-flex">
-                        <div>
-                            <figure class="avatar avatar-sm mr-3">
-                                <img src="{{ request.user.sysuser.profileImage.url}}" class="rounded-circle" alt="...">
-                            </figure>
-                        </div>
-                        <div class="flex-grow-1">
-                            <div class="form-group">
-                                <textarea rows="2" class="form-control"></textarea>
-                            </div>
-                            <button class="btn btn-outline-light">
-                                                <i data-feather="send"></i>
-                            </button>
-                        </div>
-                    </form>
-                </div>
-            
-            
-            </div>
-            <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">Lorem
-            لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم 
-            </div>
-          </div>
-    </div>
+    {% include 'mrp/purchase/tab_updatereq.html' %}
    
     
 </div>
