--- a/tiny_mrp/mrp/templates/mrp/purchase/updateReq.html
+++ b/tiny_mrp/mrp/templates/mrp/purchase/updateReq.html
@@ -52,7 +52,7 @@
     
 </div>
 <script>
-   
+   var purchase_request_id='{{company.id}}';
     $('input[name="created_at"]').pDatepicker({
         format: 'YYYY-MM-DD',
                 autoClose: true,
