--- a/tiny_mrp/mrp/templates/mrp/purchase/updateReq.html
+++ b/tiny_mrp/mrp/templates/mrp/purchase/updateReq.html
@@ -47,7 +47,7 @@
     </div>
    
     
-    {% include 'mrp/purchase/tab_updatereq.html' %}
+    {% comment %} {% include 'mrp/purchase/tab_updatereq.html' %} {% endcomment %}
    
     
 </div>
