--- a/tiny_mrp/mrp/templates/mrp/purchase/tab_updatereq_v2.html
+++ b/tiny_mrp/mrp/templates/mrp/purchase/tab_updatereq_v2.html
@@ -32,6 +32,20 @@
                 </ul>
             </div>
             {% endif %}
+            <div class="card-body">
+                <form id="image-upload-form" method="post" enctype="multipart/form-data">
+                    <div id="image-container" class="mb-3">
+                      <!-- Dynamic image input fields will be added here -->
+                    </div>
+                    <div class="d-flex justify-content-center align-items-center">
+                      <button type="button" id="add-image-btn" class="btn btn-secondary">
+                        <i class="fas fa-plus mr-2"></i>افزودن تصویر
+                      </button>
+                      
+                    
+                    </div>
+                  </form>
+            </div>
             
         </div>
         <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
