--- a/tiny_mrp/mrp/templates/mrp/menu.html
+++ b/tiny_mrp/mrp/templates/mrp/menu.html
@@ -69,6 +69,11 @@
         </a>
       </li>
       <li>
+        <a href="#" data-toggle="tooltip" data-placement="right" title="بازرگانی" data-nav-target="#apps4">
+          <i data-feather="shopping-cart"></i>
+        </a>
+      </li>
+      <li>
         <a href="#" data-toggle="tooltip" data-placement="right" title="گزارش" data-nav-target="#apps3">
           <i data-feather="layers"></i>
         </a>
@@ -140,6 +145,17 @@
   <div id="apps">
     <ul>
       <li class="navigation-divider">تنظیمات</li>
+      {% if request.user.is_superuser %}
+         
+      <li>
+        <a href="{% url 'list_user' %}">
+          <span>کاربران</span>
+
+        
+
+        </a>
+      </li>
+      {% endif %}
       <li>
         <a href="{% url 'list_shifts' %}">
           <span>شیفت ها</span>
@@ -174,6 +190,43 @@
 
     </ul>
   </div>
+  <div id="apps4">
+    <ul>
+      <li class="navigation-divider">بازرگانی</li>
+      <li>
+        <a href="{% url 'list_purchase_req' %}">
+          <span>درخواست</span>
+        
+
+        </a>
+      </li>
+      {% if request.user.is_superuser %}
+         
+      <li>
+        <a href="{% url 'list_purchase_req_detail' %}">
+          <span>همه درخواست ها</span>
+
+        
+
+        </a>
+      </li>
+      {% endif %}
+
+      <li>
+        <a href="{% url 'calendar_purchase_request_main' %}">
+          <span>تقویم</span>
+
+        
+
+        </a>
+      </li>
+
+   
+      
+
+    </ul>
+  </div>
+
   <div id="apps2">
     <ul>
       <li class="navigation-divider">راندمان</li>
