--- a/tiny_mrp/mrp/templates/mrp/purchase/purchase.html
+++ b/tiny_mrp/mrp/templates/mrp/purchase/purchase.html
@@ -20,6 +20,18 @@
                             </tr>
                         </thead>
                         <tbody id="table-body">
+                            {% if company.status != "Pending"%}
+                            {% for i in items %} 
+                            <tr data-id="{{i.id}}">
+                                <td  class="editable-cell part-name" data-id="{{i.item_name.id}}" data-partcode="{{i.item_name.partCode}}">{{i.item_name.partName}}</td>
+                                <td  class="editable-cell">{{i.quantity}}</td>
+                                <td  class="editable-cell machine-name" data-id="{{i.consume_place.id}}" data-machinecode="{{i.consume_place.assetCode}}">{{i.consume_place.assetName}}</td>
+                                <td  class="editable-cell description" data-id="">{{i.description}}</td>
+                                <td></td>
+                                
+                            </tr>
+                            {% endfor %}
+                            {% else %}
                             {% for i in items %} 
                             <tr data-id="{{i.id}}">
                                 <td contenteditable="true" class="editable-cell part-name" data-id="{{i.item_name.id}}" data-partcode="{{i.item_name.partCode}}">{{i.item_name.partName}}</td>
@@ -33,13 +45,16 @@
                             </td>
                             </tr>
                             {% endfor %}
+                            {% endif %}
                         </tbody>
+                        {% if company.status == "Pending"%}
                         <tfoot>
                             <tr class="add-row" id="add-row">
                                 <td colspan="5">  <button class="btn btn-primary  btn-floating">
                                     <i class="ti-plus"></i></button></td>
                             </tr>
                         </tfoot>
+                        {% endif %}
                     </table>
                 </div>
 
