--- a/tiny_mrp/mrp/templates/mrp/purchase/purchase_request_bill.html
+++ b/tiny_mrp/mrp/templates/mrp/purchase/purchase_request_bill.html
@@ -61,8 +61,18 @@
             </tr>
             <tr>
                 <th>وضعیت</th>
-                <td><span class="status {% if purchase_request.status == 'Approved' %}success{% elif purchase_request.status == 'Pending' %}info{% elif purchase_request.status == 'Rejected' %}danger{% endif %}">
-                    {{ purchase_request.status }}</span>
+                <td>
+                    <span class="status bg-{% if purchase_request.status == 'Approved' %}success
+                    {% elif purchase_request.status == 'Pending' %}info
+                    {% elif purchase_request.status == 'Rejected' %}danger
+                    {% elif purchase_request.status == 'Approve2' %}warning
+                    {% elif purchase_request.status == 'Approve3' %}primary
+                    {% elif purchase_request.status == 'Ordered' %}success
+                    {% else %}default
+                    {% endif %}">
+                    {{ purchase_request.get_status_display }}
+                </span>
+                    
                 </td>
             </tr>
             <tr>
