arrow key and zayeat

--- a/tiny_mrp/mrp/templates/mrp/tolid/details_aria.html
+++ b/tiny_mrp/mrp/templates/mrp/tolid/details_aria.html
@@ -153,7 +153,7 @@
                                       <td contenteditable="true" class="editable-cell3 production_full selectable1" data-maxformula="{{c.speedformula}}" data-vahed="{{c.machine.assetVahed}}" >{{c.max}}</td>
 
 
-                                      <td contenteditable="true" data-formula="{{c.formula}}" class='production'></td>
+                                      <td contenteditable="true" data-formula="{{c.formula}}" class='editable-cell production'></td>
                                       <td contenteditable="true"  class='editable-cell  waste selectable1'></td>
 
                                     </tr>
