--- a/tiny_mrp/mrp/templates/mrp/purchase/partialPurchaseList_v2.html
+++ b/tiny_mrp/mrp/templates/mrp/purchase/partialPurchaseList_v2.html
@@ -37,7 +37,7 @@
                                                 <a class="dropdown-item text-success confirm-purchase-request" data-url="{% url 'confirm_request' i.id %}" href="#">تایید</a>
 
                                                 <div class="dropdown-divider"></div>
-                                                <a class="dropdown-item text-danger delete-purchase-request" data-url="{% url 'delete_purchase_request' i.id %}" href="#">حذف</a>
+                                                <a class="dropdown-item text-danger delete-purchase-request" data-url="{% url 'delete_purchase_request_v2' i.id %}" href="#">حذف</a>
                                             </div>
                                         </div>
                                     </div>
