--- a/tiny_mrp/mrp/templates/mrp/menu.html
+++ b/tiny_mrp/mrp/templates/mrp/menu.html
@@ -52,32 +52,42 @@
     </div>
     <div class="flex-grow-1">
       <ul>
+        {% if perms.mrp.can_operator_mrp %}
         <li>
           <a href="#" data-toggle="tooltip" data-placement="right" title="اطلاعات"
           data-nav-target="#dashboards">
           <i data-feather="bar-chart-2"></i>
         </a>
       </li>
+      {% endif %}
+      {% if request.user.is_superuser%}
       <li>
         <a href="#" data-toggle="tooltip" data-placement="right" title="تنظیمات" data-nav-target="#apps">
           <i data-feather="command"></i>
         </a>
       </li>
+      {% endif %}
+      {% if perms.mrp.can_operator_mrp %}
       <li>
         <a href="#" data-toggle="tooltip" data-placement="right" title="راندمان" data-nav-target="#apps2">
           <i data-feather="coffee"></i>
         </a>
       </li>
+      {% endif %}
+      {% if perms.mrp.can_operator_purchase %}
       <li>
         <a href="#" data-toggle="tooltip" data-placement="right" title="بازرگانی" data-nav-target="#apps4">
           <i data-feather="shopping-cart"></i>
         </a>
       </li>
+      {% endif %}
+      {% if perms.mrp.can_operator_mrp %}
       <li>
         <a href="#" data-toggle="tooltip" data-placement="right" title="گزارش" data-nav-target="#apps3">
           <i data-feather="layers"></i>
         </a>
       </li>
+      {% endif %}
 
   </ul>
 </div>
@@ -88,11 +98,13 @@
         <i data-feather="settings"></i>
       </a>
     </li> -->
+    {% if request.user.is_superuser%}
     <li>
       <a href="{% url 'backup_database' %}" data-toggle="tooltip" data-placement="right" title="پشتیبان گیری">
         <i data-feather="save"></i>
       </a>
     </li>
+    {% endif %}
     <li>
       <a href="{% url 'logout' %}" data-toggle="tooltip" data-placement="right" title="خروج">
         <i data-feather="log-out"></i>
@@ -117,7 +129,7 @@
 <!-- end::navigation-logo -->
 
 <div class="navigation-menu-group">
-
+  {% if perms.mrp.can_operator_mrp %}
   <div id="dashboards">
     <ul>
       <li class="navigation-divider">اطلاعات</li>
@@ -143,6 +155,8 @@
 
     </ul>
   </div>
+  {% endif %}
+  {% if request.user.is_superuser%}
   <div id="apps">
     <ul>
       <li class="navigation-divider">تنظیمات</li>
@@ -185,6 +199,8 @@
 
     </ul>
   </div>
+  {% endif %}
+  {% if perms.mrp.can_operator_purchase %}
   <div id="apps4">
     <ul>
       <li class="navigation-divider">بازرگانی</li>
@@ -195,7 +211,7 @@
 
         </a>
       </li>
-      {% if perms.mrp.view_all_request %}
+      {% if request.user.is_superuser or perms.mrp.view_all_request %}
          
       <li>
         <a href="{% url 'list_purchase_req_detail' %}">
@@ -221,6 +237,8 @@
 
     </ul>
   </div>
+  {% endif %}
+  {% if perms.mrp.can_operator_mrp %}
   <div id="apps2">
     <ul>
       <li class="navigation-divider">راندمان</li>
@@ -257,6 +275,8 @@
 
     </ul>
   </div>
+  {% endif %}
+  {% if perms.mrp.can_operator_mrp %}
   <div id="apps3">
     <ul>
       <li class="navigation-divider">گزارشات</li>
@@ -268,6 +288,7 @@
       </a>
     </li>
   </div>
+  {% endif %}
 
 </div>
 </div>
